--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,13 @@
     color: rgb(0, 0, 255);
     font-size: 24px;
 }
+
+.three {
+    font-size: 24px;
+}
+
+#four {
+    background-color: rgb(17, 200, 0);
+    font-size: 24px;
+    font-weight: 700;
+}
